adding skills and certs and changing "About Me" content

--- a/index.html
+++ b/index.html
@@ -42,16 +42,17 @@
     <section id="about">
         <h2>About Me</h2>
         
-        <p>I’m an IT project manager with over 5 years of experience delivering successful projects across industries like software, finance, and education. My expertise includes application development, integration, and server migrations, as well as process improvement and change management. I’m passionate about creating efficient workflows and empowering teams to deliver impactful results.</p>
-        <p>I’ve led projects using all of the most common methodologies. What I’ve learned is that there isn’t a methodology that is better than the rest. What it comes down to is what works best for the project team that I’m working with.
-        </p>
-        <p>What sets me apart is my focus on communication, transparency, and flexibility. I foster open dialogue, encourage team collaboration, and ensure alignment with organizational goals. By embracing adaptability and prioritizing value-driven deliverables, I consistently lead cross-functional teams to deliver projects on time, within scope, and on budget.</p>
+        <p>Hi, I'm Tru. </p>
+        <p>I’m an IT project manager with over five years of experience leading successful projects in software, finance, and education. My expertise spans application development, system integrations, and server migrations, alongside a passion for streamlining processes and driving impactful results.</p>
+        <p> I believe the best project methodology is the one that fits the team and the task. By adapting to each project’s unique needs, I create workflows that are efficient and effective.        </p>
+        <p>What sets me apart is my commitment to communication, transparency, and flexibility. I foster collaboration, empower teams, and ensure every project aligns with organizational goals. With a focus on value-driven outcomes, I consistently deliver projects on time, within scope, and on budget.</p>
         <img src="Images/TruBell.png" alt="Trushaun Bell" class="about-pic">
     </section>
+
     <section id="Quotes">
         <h2>Project Management Proverbs</h2>
         <blockquote id="cQuote">FORTUNE FAVORS THE BOLD!</blockquote>
-        <blockquote id="cQuote">WE CAN DO ANYTHING WITH THE PROPER RESOURCES.</blockquote>
+        <blockquote id="cQuote">WE CAN DO ANYTHING WITH THE PROPER PROCESSES.</blockquote>
         <blockquote id="cQuote">WE AREN'T DELIVERING A PROJECT, WE ARE DELIVERING SOLUTIONS.</blockquote>
         <blockquote id="cQuote">COMMUNICATION OPENS THE DOORS TO INFINITE POSSIBILITIES.</blockquote>
         <blockquote id="cQuote">TEAMWORK MAKES THE DREAM WORK!</blockquote>
@@ -198,6 +199,12 @@
             <div class="swiper-button-prev"></div>
         </div>
     </section>
+    <!-- Skills & Certifications Section-->
+
+    <section id="skills">
+        <h2>Certifications & Skills</h2>
+        <p> Project Management Professional (PMP) | Certified ScrumMaster | Certified SAFe Agilist | Stakeholder Management | Vendor Management | Cross-Functional Team Leadership | Servant Leadership | Waterfall | Agile | Scrum | Kanban | Communications Management | Budget Management | Jira | Confluence | ServiceNow PPM | Microsoft Project | Microsoft 365 Office Suite | Monday.com | Trello | Zoom | Microsoft Teams | SQL | GitHub </p>
+    </section>
 
     <!-- Contact Section -->
     <section id="contact">
@@ -231,55 +238,4 @@
 </html>
 
 
-   <!-- <section id="projects">
-    <h2>Projects</h2>
-    <div class="projects-container">
-
-        <!-- Granite City Project 
-        <div class="project-card">
-            <div class="project-card-inner">
-                <div class="project-card-front">
-                    <h3>Vendor Transition Project</h3>
-                    <p>Granite City Food & Brewery</p>
-                </div>
-                <div class="project-card-back">
-                    <p>Improved device management and reduced IT operational costs by 10%.</p>
-                    <p>Role: IT Field Support Technician</p>
-                </div>
-            </div>
-        </div>
-
-        <!-- Jamf Cloud Migration 
-        <div class="project-card">
-            <div class="project-card-inner">
-                <div class="project-card-front">
-                    <h3>Cloud Migration Project</h3>
-                    <p>Jamf Software LLC</p>
-                </div>
-                <div class="project-card-back">
-                    <p>Successfully migrated 10,000+ devices and generated $250,000 in sales.</p>
-                    <p>Role: Professional Services Project Manager</p>
-                </div>
-            </div>
-        </div>
-
-        <!-- Jamf Vendor Transition 
-        <div class="project-card">
-            <div class="project-card-inner">
-                <div class="project-card-front">
-                    <h3>Vendor Transition Project</h3>
-                    <p>Jamf Software LLC</p>
-                </div>
-                <div class="project-card-back">
-                    <p>Migrated to ServiceNow PPM, streamlining operations.</p>
-                    <p>Role: Operations Project Manager</p>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</section> -->
-
-
-</body>
-</html>
+ 
