adding a sentence underneath contact me photo

--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
         <h2>Contact Me</h2>
         <div class="contact-container">
             <img src="Images/seattleTru.jpeg" alt="Trushaun Bell contact pic" class="contact-photo">
+            <p>Ready to collaborate on your next project? Let's connect!</p>
          <form action="https://formspree.io/f/movvopzv" method="POST" class="contact-form">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" placeholder="Your Name" required>
