adding menu bar to sit in top right corner of webpage for ease of access

--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
     <!-- Header and Navigation -->
     <header>
         <nav class="navbar">
-            <ul>
+            <div class="menu-toggle" id="menu-toggle">
+                ☰ <!-- Hamburger Icon -->
+                </div>
+            <ul class="menu" id="menu">
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="https://linkedin.com/in/trubell-techpm" target="_blank">Resume</a></li>
+                <li><a href="https://linkedin.com/in/trubell-techpm" target="_blank">My Resume</a></li>
             </ul>
         </nav>
         <div class="header-container">
