adding footer to index

--- a/index.html
+++ b/index.html
@@ -249,6 +249,16 @@
 });
 
     </script>
+    <footer class="footer">
+        <div class="footer-container">
+            <p>&copy; 2025 Trushaun Bell. All rights reserved.</p>
+            <div class="social-links">
+                <a href="https://www.linkedin.com/in/trubell-techpm" target="_blank">Resume</a> |
+                <a href="about" target="_blank">Back to Top</a> |
+            </div>
+        </div>
+    </footer>
+    
 </body>
 </html>
 
