correcting syntax for index.html

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             <p>&copy; 2025 Trushaun Bell. All rights reserved.</p>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/trubell-techpm" target="_blank">Resume</a> |
-                <a href="about" target="_blank">Back to Top</a> |
+                <a href="#about" target="_blank">Back to Top</a> |
             </div>
         </div>
     </footer>
