--- a/index.html
+++ b/index.html
@@ -253,8 +253,12 @@
         <div class="footer-container">
             <p>&copy; 2025 Trushaun Bell. All rights reserved.</p>
             <div class="social-links">
-                <a href="https://www.linkedin.com/in/trubell-techpm" target="_blank">Resume</a> |
-                <a href="#about" target="_blank">Back to Top</a> |
+                <nav class="'navbar2">
+                    <ul>
+                        <li><a href="https://www.linkedin.com/in/trubell-techpm" target="_blank">Resume</a></li>
+                        <li><a href="#about" target="_blank">Back to Top</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </footer>
