--- a/index.html
+++ b/index.html
@@ -251,15 +251,10 @@
     </script>
     <footer class="footer">
         <div class="footer-container">
-            <p>&copy; 2025 Trushaun Bell. All rights reserved.</p>
             <div class="social-links">
-                <nav class="'navbar2">
-                    <ul>
-                        <li><a href="https://www.linkedin.com/in/trubell-techpm" target="_blank">Resume</a></li>
-                        <li><a href="#about" target="_blank">Back to Top</a></li>
-                    </ul>
-                </nav>
+                <a href="https://linkedin.com/in/trubell-techpm" target="_blank">LinkedIn</a>      
             </div>
+            <p>&copy; 2025 Trushaun Bell. All rights reserved.</p>
         </div>
     </footer>
     
