--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="social-links">
-                <a href="https://linkedin.com/in/trubell-techpm" target="_blank">LinkedIn</a>      
+                <a href="https://linkedin.com/in/trubell-techpm" target="_blank">Resume</a>      
             </div>
             <p>&copy; 2025 Trushaun Bell. All rights reserved.</p>
         </div>
