Update index.html - adding a missing word

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h2>About Me</h2>
         
         <p>Hi, I'm Tru. </p>
-        <p>I’m a Technical Project Manager with over five years of experience leading successful projects various industries like software, finance, and education. My expertise spans application development, system integrations, and server migrations, alongside a passion for streamlining processes and driving impactful results.</p>
+        <p>I’m a Technical Project Manager with over five years of experience leading successful projects in various industries like software, finance, and education. My expertise spans application development, system integrations, and server migrations, alongside a passion for streamlining processes and driving impactful results.</p>
         <p> I believe the best project methodology is the one that fits the team and the task. By adapting to each project’s unique needs, I create workflows that are efficient and effective.        </p>
         <p>What sets me apart is my commitment to communication, transparency, and flexibility. I foster collaboration, empower teams, and ensure every project aligns with organizational goals. With a focus on value-driven outcomes, I consistently deliver projects on time, within scope, and on budget. <a href="https://linkedin.com/in/trubell-techpm" target="_blank"> Click here to view my resume.</a>
         <img src="Images/TruBell.png" alt="Trushaun Bell" class="about-pic">
