--- a/index.html
+++ b/index.html
@@ -209,28 +209,27 @@
 
     <!-- Contact Section -->
   
-        <h2>Contact Me</h2>
-        <p>Ready to collaborate on your next project? Let's connect!</p>
-      <section id="contact">
-            <img src="Images/seattleTru.jpeg" alt="Trushaun Bell contact pic" class="contact-photo"> 
-          <form id="contactForm">
-                <div class="form-group">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" placeholder="Your Name" required>
-                </div>
-              <div class="form-group"> 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Your Email" required>
-              </div>
-               <div class="form-group">
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" rows="5" placeholder="Your Message" required></textarea>
-               </div>
+<section id="contact">
+    <h2>Contact Me</h2>
+    <div class="contact-container">
+        <img src="Images/contact-photo.jpg" alt="Contact Photo" class="contact-photo">
+        <form id="contactForm">
+            <div class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="5" required></textarea>
+            </div>
             <button type="submit" class="submit-button">Send Message</button>
-         </form>
-            <p id="formStatus" style="color: Green; display: none;"> Your message has been sent successfully! </p>
-        </div>    
-    </section>
+        </form>
+    </div>
+</section>
 
      <footer class="footer">
         <div class="footer-container">
