Update index.html - changing contact me photo

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 <section id="contact">
     <h2>Contact Me</h2>
     <div class="contact-container">
-        <img src="Images/contact-photo.jpg" alt="Contact Photo" class="contact-photo">
+        <img src="Images/seattleTru.jpeg" alt="Contact Photo" class="contact-photo">
         <form id="contactForm">
             <div class="form-group">
                 <label for="name">Name:</label>
