--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
   
 <section id="contact">
     <h2>Contact Me</h2>
+    <p>Ready to collaborate on your next Project? Let's connect!</p>
     <div class="contact-container">
         <img src="Images/seattleTru.jpeg" alt="Contact Photo" class="contact-photo">
         <form id="contactForm">
