--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
             </div>
             <button type="submit" class="submit-button">Send Message</button>
         </form>
+        <p id="formStatus" style="color: green; display: none;">Your message has been sent successfully!</p>
     </div>
 </section>
 
