--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <p>Ready to collaborate on your next Project? Let's connect!</p>
     <div class="contact-container">
         <img src="Images/seattleTru.jpeg" alt="Contact Photo" class="contact-photo">
-        <form id="contactForm" action="https://formspree.io/f/movvopzv" method="POST">
+        <form action="https://formspree.io/f/movvopzv" method="POST" id="contactForm">
             <div class="form-group">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
